chore: cleaner docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,11 +41,7 @@ services:
       redis:
         condition: service_healthy
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/clothes_ar
-      SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: password
-      SPRING_REDIS_HOST: redis
-      SPRING_REDIS_PORT: 6379
+      SPRING_PROFILES_ACTIVE: prod
     ports:
       - "8080:8080"
 
