--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,7 +2,7 @@ spring.liquibase.enabled=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5433/clothes_ar
+spring.datasource.url=jdbc:postgresql://db:5432/clothes_ar
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
